# autogmm

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: api.rst  conf.py
examples/: experiments.ipynb
src/autogmm/: __init__.py  autogmm.py
